made stylesheet relative so it renders properly on github pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
    <meta name="author" content="Lindsay Holmwood" />
  
    <!-- Homepage CSS -->
-   <link rel="stylesheet" href="/stylesheets/screen.css" type="text/css" media="screen, projection" />
+   <link rel="stylesheet" href="stylesheets/screen.css" type="text/css" media="screen, projection" />
 </head>
 <body>
 	<div id="wrapper">
