make background a rich dark gray

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -12,7 +12,7 @@ body {
 /* styles */
 body {
   font-size: 1.3em;
-  background-color: black;
+  background-color: #0e1111;
   font-family: Georgia, Times New Roman, serif;
 }
 
