--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -21,6 +21,8 @@ div#wrapper {
   margin-left: 160px;
   width: 700px;
   padding: 2em;
+  -moz-box-shadow: 0 0 5px 5px rgba(255,255,255,0.3);
+  -webkit-box-shadow: 0 0 5px 5px rgba(255,255,255,0.3);
 }
 
 div#header {
@@ -33,6 +35,8 @@ h1.project {
   color: white;
   padding: 12px;
   display: inline;
+  -moz-box-shadow: 0 0 10px rgba(43,121,17,0.8);
+  -webkit-box-shadow: 0 0 10px rgba(43,121,17,0.8);
 }
 
 blockquote {
@@ -42,10 +46,12 @@ blockquote {
 pre.code {
   background-color: #3b3b3b;
   color: #efefef;
-  padding: 12px 16px 0px;
-  font-family: Lucida Console, monospace;
+  padding: 18px 16px 0px;
+  font-family: Lucida Console, Courier New, monospace;
   letter-spacing: 1px;
   font-size: 0.8em;
+  -moz-box-shadow: 2px 2px 10px rgba(59,59,59,0.8);
+  -webkit-box-shadow: 2px 2px 10px rgba(59,59,59,0.8);
 }
 
 p {
@@ -100,6 +106,8 @@ a:hover {
 p.notice {
   background-color: #f6ffa6;
   padding: 1em;
+  -moz-box-shadow: 1px 1px 10px rgba(59,59,59,0.2);
+  -webkit-box-shadow: 1px 1px 10px rgba(59,59,59,0.2);
 }
 
 p.notice img {
